# libsql-swift

./: .gitignore  .gitmodules  .swift-format  CONTRIBUTING.md  Package.swift  README.md
Examples/: local.db
Examples/Batch/: README.md  main.swift
Examples/Local/: README.md  main.swift
Examples/Memory/: README.md  main.swift
Examples/Query/: main.swift
Examples/Remote/: README.md  main.swift
Examples/SimpleQuery/: main.swift
Examples/Sync/: README.md  main.swift
Examples/Transaction/: main.swift
Examples/Transactions/: README.md  main.swift
Examples/Vector/: main.swift
Sources/CLibsql/: Cargo.toml  build.sh  module.modulemap
Sources/CLibsql/CLibsql.xcframework/: Info.plist
Sources/Libsql/: Libsql.swift
Tests/LibsqlTests/: LibsqlTests.swift
